--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "dependencies": {
         "discord.js": "^12.5.1",
         "dotenv": "^8.2.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.6"
     }
 }
