--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@discordjs/opus": "^0.3.3",
+        "discord-ytdl-core": "^5.0.0",
         "discord.js": "^12.5.1",
-        "dotenv": "^8.2.0"
+        "dotenv": "^8.2.0",
+        "ffmpeg": "0.0.4",
+        "fluent-ffmpeg": "^2.1.2",
+        "yt-search": "^2.5.1",
+        "ytdl-core": "^4.2.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.6"
