--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^8.2.0",
         "ffmpeg": "0.0.4",
         "fluent-ffmpeg": "^2.1.2",
+        "npm": "^6.14.10",
         "yt-search": "^2.5.1",
         "ytdl-core": "^4.2.1"
     },
@@ -24,6 +25,6 @@
         "nodemon": "^2.0.6"
     },
     "engines": {
-        "node": "10.19.0"
+        "node": "14.15.3"
     }
 }
