--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
         "discord.js": "^12.5.1",
         "dotenv": "^8.2.0",
         "ffmpeg": "0.0.4",
+        "ffmpeg-static": "^4.4.0",
         "fluent-ffmpeg": "^2.1.2",
-        "yt-search": "^2.5.1",
-        "ytdl-core": "^4.2.1"
+        "yt-search": "^2.9.0",
+        "ytdl-core": "^4.8.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.6"
